Fix z-index

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -988,7 +988,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1520;
+    z-index: 1020;
 }
 
 .dropdown ul { 
